Quick-fix style regression w/ collapsed composer notice icons
Still not fixed 100% on Firefox, would require a larger style refactoring to make the icon stack styled in a more solid way

From bufferapp/buffer-web@7bfd2c37556191fbd3aa03aeb6d1ba5879c622c2

--- a/packages/composer/components/css/Composer.css
+++ b/packages/composer/components/css/Composer.css
@@ -565,8 +565,8 @@
   opacity: 0;
   color: var(--composer-notice-icon-color);
   position: absolute;
-  left: -6px;
-  top: -2px;
+  left: -7px;
+  top: -1px;
   background: white;
   border: none;
 }
