--- a/packages/composer/components/css/MediaAttachmentThumbnail.css
+++ b/packages/composer/components/css/MediaAttachmentThumbnail.css
@@ -103,6 +103,7 @@
   border-bottom-right-radius: 0;
   font-size: 12px;
   text-align: center;
+  text-indent: 1px;
   line-height: 23px;
 }
 
